<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.EditProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/title_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/edit_profile_title_images"
                android:textAppearance="@android:style/TextAppearance.Material.Menu"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <GridView
                android:id="@+id/image_gridview"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:numColumns="3">

            </GridView>

            <TextView
                android:id="@+id/title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/edit_profile_title_description"
                android:textAppearance="@android:style/TextAppearance.Material.Menu"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_profile_hint_description"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="1"
                android:gravity="top|left"
                android:maxLines="10"
                android:scrollbars="vertical"/>

            <TextView
                android:id="@+id/title_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/edit_profile_title_job"
                android:textAppearance="@android:style/TextAppearance.Material.Menu"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/edit_profile_hint_job"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:minLines="1"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/title_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/edit_profile_title_sex"
                android:textAppearance="@android:style/TextAppearance.Material.Menu"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/gender_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/gender_radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/preferences_item_discovery_gender_male" />

                    <RadioButton
                        android:id="@+id/gender_radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/preferences_item_discovery_gender_female" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/title_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/edit_profile_title_school"
                android:textAppearance="@android:style/TextAppearance.Material.Menu"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/edit_profile_hint_school"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:minLines="1"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/title_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/edit_profile_title_song"
                android:textAppearance="@android:style/TextAppearance.Material.Menu"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/edit_profile_hint_song"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:minLines="1"
                android:scrollbars="vertical" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>